--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ hexHover {  0% {
 
 <body>
 	 <img src="swan.png" style="display: block; margin-left: 30%; height: 30%; width: 40%">
-	 <h3 style="display: block; text-align: center; color: rgb(100,125,200);">Welcome to Swan official GitHub page</h3>
+	 <h3 style="display: block; text-align: center; color: rgb(100,125,200);">Welcome to Swan's official GitHub page</h3>
 
 
 <nav id="hexNav">
