--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Education</h2>
+                <h2 class="container-block-title">Educação</h2>
                 <div class="item">
                     <h4 class="degree">Bacharelado em aviação civil</h4>
                     <h5 class="meta">Universidade Anhembi Morumbi</h5>
@@ -55,7 +55,7 @@
             </div><!--//education-container-->
             
             <div class="languages-container container-block">
-                <h2 class="container-block-title">Languages</h2>
+                <h2 class="container-block-title">Idiomas</h2>
                 <ul class="list-unstyled interests-list">
                     <li>Inglês <span class="lang-desc">Fluente (TOEIC 950/990 pts.)</span></li>
                     <li>Espanhol <span class="lang-desc">Básico</span></li>
@@ -106,7 +106,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Programador web & mobile (híbrido)</h3>
-                            <div class="time">2019 - 2019/div>
+                            <div class="time">2019 - 2019 </div>
                         </div><!--//upper-row-->
                         <div class="company">Freelancer</div>
                     </div><!--//meta-->
@@ -121,9 +121,9 @@
             </section><!--//section-->
             <!--//section-->
             <section class="section projects-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-archive"></i></span>Projects</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fa-solid fa-archive"></i></span>Projetos</h2>
                 <div class="intro">
-                    <p>...EM CONSTRUÇÃO</p>
+                    <p>Alguns projetos pessoais e profissionais</p>
                 </div><!--//intro-->
                 <div class="item">
                     <span class="project-title"><a href="https://play.google.com/store/apps/details?id=com.pegasus.computadordevoo&hl=en&gl=US" target="_blank">Pegaus computador de voo</a></span> - <span class="project-tagline">Um dispositivo multiplataforma voltado para pilotos em formação para auxiliar professores nas disciplinas de navegação aérea </span>
