--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa-solid fa-envelope"></i><a href="mailto: manuelbaraosoldado0101@gmail.com">manuelbaraosoldado0101@gmail.com</a></li>
-                    <li class="phone"><i class="fa-solid fa-phone"></i><a href="tel:(11)94787-2407">(11)94787-2407"</a></li>
+                    <li class="email"><i class="fa-solid fa-envelope"></i><a href="mailto: manuelbaraosoldado0101@gmail.com">manuelbaraosoldado0101@gmail.com </a></li>
+                    <li class="phone"><i class="fa-solid fa-phone"></i><a href="tel:(11)94787-2407">(11)94787-2407</a></li>
                    <!--// <li class="website"><i class="fa-solid fa-globe"></i><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/" target="_blank">portfoliosite.com</a></li>
                     <li class="twitter"><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
                     <li class="linkedin"><i class="fa-brands fa-linkedin-in"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li> -->
