--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Manuel Barão Rodrigues Soldado</h1>
       <p>Meus interesses: <span class="typed" data-typed-items="Matemática, Programação, Aviação, Inteligência artificial, Esportes, Engenharia reversa, Blockchain"></span></p> <div class="social-links">
-        <a href="[Link do seu Instagram, se tiver]" class="instagram"><i class="bx bxl-instagram"></i></a> <a href="mailto:manuelbaraosoldado0101@gmail.com" class="gmail"><i class='bx bxl-gmail'></i></a> <a href="https://www.linkedin.com/in/el-bar%C3%A3o-347435246/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="[Link do seu Github, se tiver]" target="_blank" class="github"><i class="bx bxl-github"></i></a> <p style="margin-top: 10px; font-size: 0.9em;">manuelbaraosoldado0101@gmail.com</p> </div>
+        <a href="" class="instagram"><i class="bx bxl-instagram"></i></a> <a href="mailto:manuelbaraosoldado0101@gmail.com" class="gmail"><i class='bx bxl-gmail'></i></a> <a href="https://www.linkedin.com/in/el-bar%C3%A3o-347435246/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="" target="_blank" class="github"><i class="bx bxl-github"></i></a> <p style="margin-top: 10px; font-size: 0.9em;">manuelbaraosoldado0101@gmail.com</p> </div>
     </div>
   </section><main id="main">
 
@@ -50,7 +50,7 @@
         <div class="container" data-aos="fade-up">
 
           <div class="section-title">
-            <h2>Sobre Mim</h2> <p> [Adapte este texto com base no seu resumo profissional. Exemplo: Profissional de TI com formação em Tecnologia da Informação e Aviação Civil, apaixonado por resolver problemas complexos através da programação e matemática. Experiência em desenvolvimento C/C++, Python, Blockchain e atuação em projetos desafiadores. Atualmente trabalhando com tecnologias inovadoras no Banco do Brasil e buscando constantemente novos conhecimentos.]</p>
+            <h2>Sobre Mim</h2> <p> Profissional de TI com formação em Tecnologia da Informação e Aviação Civil, apaixonado por resolver problemas complexos através da programação e matemática. Experiência em desenvolvimento C, Python, Java(Quarkus), Blockchain e atuação em projetos desafiadores. Atualmente trabalhando com tecnologias inovadoras no Banco do Brasil e buscando constantemente novos conhecimentos.</p>
             </div>
 
           <div class="row">
@@ -80,7 +80,7 @@
             <div class="count-box">
               <i class="bi bi-patch-check-fill"></i> <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Aprovações Diversas</strong></p>
-              <p style="font-size: 0.85em;">Incluindo concursos e vestibulares como USP, Amazul, Detran, Unicamp, Univesp, Fatec, Enem, entre outros.</p> </div>
+              <p style="font-size: 0.85em;">Incluindo concursos e vestibulares como USP, Amazul, Detran, Unicamp, Univesp, Fatec, Ufscar, Unesp, entre outros.</p> </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
@@ -123,7 +123,7 @@
           <div class="col-lg-6">
 
              <div class="progress">
-              <span class="skill">Programação C/C++ <i class="val">90%</i></span> <div class="progress-bar-wrap">
+              <span class="skill">Programação C <i class="val">90%</i></span> <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
@@ -178,18 +178,13 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">70%</i></span>
+              <span class="skill">Java/Quarkus <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Photoshop/Indesign/Gimp <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+            
 
           </div>
 
@@ -197,7 +192,7 @@
          <div class="row skills-content" style="margin-top: 20px;">
             <div class="col-lg-6">
                  <div class="progress">
-                  <span class="skill">Matemática (Nível Superior) <i class="val">99%</i></span> <div class="progress-bar-wrap">
+                  <span class="skill">Matemática (nível médio)<i class="val">99%</i></span> <div class="progress-bar-wrap">
                     <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -224,9 +219,24 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Formação Acadêmica</h3>
             <div class="resume-item">
+              <h4>Pós-graduação em desenvolvimentode software</h4>
+              <h5>2025 - 2025</h5>
+              <p><em>Universidade Focus</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Pós-graduação em segurançada informação</h4>
+              <h5>2020 - 2023</h5>
+              <p><em>Universidade Dom Alberto</em></p>
+            </div>
+<div class="resume-item">
               <h4>Bacharelado em Tecnologia da Informação</h4>
               <h5>2020 - 2023</h5>
               <p><em>Universidade Virtual do Estado de São Paulo (UNIVESP)</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bacharelado em Sistemas de Informação</h4>
+              <h5>2017 - 2020 // Abandonei na pandemia e fui para UNIVESP</h5>
+              <p><em>Universidade de São Paulo (USP)</em></p>
             </div>
             <div class="resume-item">
               <h4>Bacharelado em Aviação Civil</h4>
@@ -238,19 +248,19 @@
               <h5>2022</h5>
               <p><em>TOEIC: 950/990 pontos (Nível C1 - Avançado/Fluente)</em></p> </div>
 
-             <h3 class="resume-title mt-4">Concursos e Aprovações</h3>
+             <h3 class="resume-title mt-4">Concursos em que fui convocado</h3>
              <div class="resume-item">
-                <h4><i class="bi bi-check-circle-fill text-success"></i> Aprovado</h4>
+                <h4><i class="bi bi-check-circle-fill text-success"></i> Outras áreas</h4>
                 <p><em>Perito Criminal Oficial - Polícia Técnico-Científica de SP</em></p>
             </div>
              <div class="resume-item">
-                <h4><i class="bi bi-bell-fill text-info"></i> Convocado (Concursos de TI)</h4>
+                <h4><i class="bi bi-bell-fill text-info"></i> Concursos de TI</h4>
                  <ul>
                     <li>Serpro</li>
                     <li>Amazul</li>
                     <li>Banco do Brasil</li>
                     <li>Unicamp</li>
-                    <li>Entre outros</li>
+                    <li>outros</li>
                  </ul>
             </div>
              </div>
@@ -262,10 +272,10 @@
               <h4>Analista de TI (Foco em Inovação)</h4> <h5>09/2023 - Presente</h5>
               <p><em>Banco do Brasil</em></p>
               <ul>
-                <li>Atuação em projetos com tecnologias de Blockchain e Bitcoin.</li>
-                <li>Gerenciamento e utilização de Hardware Security Modules (HSM).</li>
-                <li>[Adicione outras responsabilidades relevantes, ex: Pesquisa e desenvolvimento de novas soluções tecnológicas]</li>
-                <li>[Adicione outra responsabilidade]</li>
+                <li>Atuação em projetos com tecnologias de Blockchain, Bitcoin, wallets e trade de cripto.</li>
+                <li>Utilização de Hardware Security Modules (HSM).</li>
+                <li>Java (Quarkus), Banco de dados relacional</li>
+                <li>Time ágil</li>
               </ul>
             </div>
              <div class="resume-item">
@@ -275,7 +285,7 @@
               <ul>
                 <li>Desenvolvimento de software embarcado em linguagem C para máquinas de Ponto de Venda (POS).</li>
                 <li>Manutenção e otimização de código legado.</li>
-                 <li>Testes unitários e de integração.</li>
+                 <li>Análisede dados, telemetria e protocolo MQTT</li>
               </ul>
             </div>
              <div class="resume-item">
@@ -455,13 +465,11 @@
     <div class="container">
       <h3>Manuel Barão Rodrigues Soldado</h3>
       <p>Obrigado pela visita!</p> <div class="social-links">
-         <a href="[Link do seu Instagram, se tiver]" class="instagram"><i class="bx bxl-instagram"></i></a>
+         <a href="instagram. com/el_barao_" class="instagram"><i class="bx bxl-instagram"></i></a>
          <a href="https://www.linkedin.com/in/el-bar%C3%A3o-347435246/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
          <a href="mailto:manuelbaraosoldado0101@gmail.com" class="google-plus"><i class="bx bxl-gmail"></i></a> <a href="[Link do seu Github, se tiver]" target="_blank" class="github"><i class="bx bxl-github"></i></a>
       </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
+      
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
