--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav></header><section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Manuel Barão Rodrigues Soldado</h1>
-      <p>Meus interesses: <span class="typed" data-typed-items="Matemática, Programação, Aviação, Inteligência artificial, Esportes, Engenharia reversa, Blockchain"></span></p> <div class="social-links">
+      <p>Meus interesses: <span class="typed" data-typed-items="Matemática, Programação, Aviação, Inteligência artificial, Esportes, Critomoedas, Blockchain"></span></p> <div class="social-links">
         <a href="" class="instagram"><i class="bx bxl-instagram"></i></a> <a href="mailto:manuelbaraosoldado0101@gmail.com" class="gmail"><i class='bx bxl-gmail'></i></a> <a href="https://www.linkedin.com/in/el-bar%C3%A3o-347435246/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="" target="_blank" class="github"><i class="bx bxl-github"></i></a> <p style="margin-top: 10px; font-size: 0.9em;">manuelbaraosoldado0101@gmail.com</p> </div>
     </div>
